--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "start": "npx tsx --env-file=.env --watch  server.ts",
+    "start": "npx tsx --watch  server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
