--- a/backend/package.json
+++ b/backend/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "start": "npx tsx --watch  server.ts",
+    "start": "npx tsx --watch Server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "better-sqlite3": "^12.4.1",
     "express": "^5.1.0",
     "reflect-metadata": "^0.2.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "^24.6.2"
+    "@types/node": "^24.6.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8"
   }
 }
